the fourth commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<header>
 		<nav>
 			<div class="left">
-				<img src="" alt="">
+				<img src="./images/coffee-beans.png" alt="logo for barista coffee">
 			</div>
 		</nav>
 	</header>
