the nav session done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 		<nav>
 			<div class="left">
 				<img src="./images/coffee-beans.png" alt="logo for barista coffee">
+				<h4 class = "word-logo">Barista</h4>
 			</div>
+			<ol>
+				<li>Home</li>
+				<li>About</li>
+				<li>Our Menu</li>
+				<li>Review</li>
+				<li>Contact</li>
+			</ol>
+			<button class="reservation">Reservation</button>
 		</nav>
 	</header>
 </body>
