--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 			</ol>
 			<button class="reservation">Reservation</button>
 		</nav>
+		<div class="center">
+			<h5 class="about-company">
+				<i>Welcome to barista-coffee.com</i>
+			</h5>
+			<h2 class="heading-company">
+				Cafe Klang
+			</h2>
+			<p class="pointer">Your <i>favourite</i>&nbsp;coffee daily lives</p>
+			<button class="twin-bbtn">Our Story</button>
+			<button  class="twin-bbtn">Check Menu</button>
+		</div>
 	</header>
 </body>
 </html>
