done with the head section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 				Cafe Klang
 			</h2>
 			<p class="pointer">Your <i>favourite</i>&nbsp;coffee daily lives</p>
-			<button class="twin-bbtn">Our Story</button>
-			<button  class="twin-bbtn">Check Menu</button>
+			
+			<button class="twin-bbtn left-hand">Our Story</button>
+			<button  class="twin-bbtn right-hand">Check Menu</button>
 		</div>
 	</header>
 </body>
