--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
 				Cafe Klang
 			</h2>
 			<p class="pointer">Your <i>favourite</i>&nbsp;coffee daily lives</p>
-			
+
 			<button class="twin-bbtn left-hand">Our Story</button>
 			<button  class="twin-bbtn right-hand">Check Menu</button>
 		</div>
 	</header>
+	<!-- the section template begins here -->
+	<section>
+		
+	</section>
 </body>
 </html>
