--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
 	</header>
 	<!-- the section template begins here -->
 	<section>
-		
+		<div class="replica-section left-twins">
+				<h3 class="insider-word">
+					We Started Since 2009. <br>
+					Best Caffee Klang.
+				</h3>
+		</div>
+		<div class="replica-section"></div>
 	</section>
 </body>
 </html>
