--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@
 					Best Caffee Klang.
 				</h3>
 		</div>
-		<div class="replica-section"></div>
+		<div class="replica-section">
+			<p class="link"><a href="#">Barista.com</a></p>
+			<h3 class="logo-head">Cafe KL</h3>
+			<p>
+				The cafe had been in town for a s long as <br>
+				anyone could remember, and it had become a<br>
+				beloved institution among the locals.
+				</p>
+			<p>
+				The cafe was run by friendly and hospitable couple, Mr. and Mrs Johnson. Barista Cafe is <br>amazing 	
+			</p>
+			<button class="meet-barri">Meet Barista</button>
+		</div>
 	</section>
 </body>
 </html>
