--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 				</h3>
 		</div>
 		<div class="replica-section">
-			<p class="link"><a href="#">Barista.com</a></p>
+			<p class="link"><a href="#"><i>Barista.com</i></a></p>
 			<h3 class="logo-head">Cafe KL</h3>
-			<p>
+			<p class=" above-word">
 				The cafe had been in town for a s long as <br>
 				anyone could remember, and it had become a<br>
 				beloved institution among the locals.
 				</p>
-			<p>
+			<p class=" beneath-word">
 				The cafe was run by friendly and hospitable couple, Mr. and Mrs Johnson. Barista Cafe is <br>amazing 	
 			</p>
 			<button class="meet-barri">Meet Barista</button>
