--- a/index.html
+++ b/index.html
@@ -57,5 +57,9 @@
 			<button class="meet-barri">Meet Barista</button>
 		</div>
 	</section>
+	<!-- the main section begins here -->
+	 <main>
+		
+	 </main>
 </body>
 </html>
