--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
 	</section>
 	<!-- the main section begins here -->
 	 <main>
-		
+		<div class="four-cousins">
+
+		</div>
+		<div class="four-cousins">
+
+		</div>
+		<div class="four-cousins">
+
+		</div>
+		<div class="four-cousins">
+			
+		</div>
 	 </main>
 </body>
 </html>
