--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li>Review</li>
 				<li>Contact</li>
 			</ol>
-			<button class="reservation">Reservation</button>
+			<button class="reservation">Reservation &nbsp;<i class="fa-solid fa-arrow-trend-up"></i></button>
 		</nav>
 		<div class="center">
 			<h5 class="about-company">
@@ -59,18 +59,19 @@
 	</section>
 	<!-- the main section begins here -->
 	 <main>
-		<div class="four-cousins">
+		<div class="four-cousins one">
 
 		</div>
-		<div class="four-cousins">
+		<div class="four-cousins two">
 
 		</div>
-		<div class="four-cousins">
+		<div class="four-cousins three">
 
 		</div>
-		<div class="four-cousins">
+		<div class="four-cousins four">
 			
 		</div>
 	 </main>
 </body>
+<script src="https://kit.fontawesome.com/8968bf567a.js" crossorigin="anonymous"></script>
 </html>
