--- a/index.html
+++ b/index.html
@@ -59,8 +59,15 @@
 	</section>
 	<!-- the main section begins here -->
 	 <main>
+		<h3></h3>
 		<div class="four-cousins one">
-
+				<div class = "interior-info">
+					<span class="title-name">Steve</span>
+					<span class="boss">Boss</span>
+				</div>
+				<p class="inside-adv">
+					Your favorite coffee <br>daily lives tempor
+				</p>
 		</div>
 		<div class="four-cousins two">
 
