last section in the main done

--- a/index.html
+++ b/index.html
@@ -70,13 +70,31 @@
 				</p>
 		</div>
 		<div class="four-cousins two">
-
+			<div class = "interior-info">
+				<span class="title-name">Jackson</span>
+				<span class="boss">Senior</span>
+			</div>
+			<p class="inside-adv">
+				Your favorite coffee <br>daily lives tempor
+			</p>
 		</div>
 		<div class="four-cousins three">
-
+			<div class = "interior-info">
+				<span class="title-name">Sandra</span>
+				<span class="boss">Manager</span>
+			</div>
+			<p class="inside-adv">
+				Your favorite coffee <br>daily lives tempor
+			</p>
 		</div>
 		<div class="four-cousins four">
-			
+			<div class = "interior-info">
+				<span class="title-name">Mitchell</span>
+				<span class="boss">Barista</span>
+			</div>
+			<p class="inside-adv">
+				Your favorite coffee <br>daily lives tempor
+			</p>
 		</div>
 	 </main>
 </body>
