--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
 			</p>
 		</div>
 	 </main>
+	 <!-- this is the article section -->
+	 <article>
+		
+	 </article>
 </body>
 <script src="https://kit.fontawesome.com/8968bf567a.js" crossorigin="anonymous"></script>
 </html>
