--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 	 </main>
 	 <!-- this is the article section -->
 	 <article>
-		
+		<div class = "transparent-twinny">
+			
+		</div>
+		<div class = "transparent-twinny"></div>
 	 </article>
 </body>
 <script src="https://kit.fontawesome.com/8968bf567a.js" crossorigin="anonymous"></script>
