--- a/index.html
+++ b/index.html
@@ -100,7 +100,31 @@
 	 <!-- this is the article section -->
 	 <article>
 		<div class = "transparent-twinny">
+			<p class = "little-pointer">Delicious menu</p>
+			<h3 class = " pointer-heading">Breakfast</h3>
+				<table>
+					<tr class = "first-row ">
+							<td>Pancake</td>
+							<td>$12.50</td>
+					</tr>
+					<tr class = " second-row">
+						<td>Pancake</td>
+						<td>$12.50</td>
+					</tr>
+					<!-- <p class = "beneath-text">fresh brewed coffee and streamed milk </p> -->
+					<tr class ="third-row">
+							<td>Pancake</td>
+							<td>$12.50</td>
+					</tr>
+					<tr>
+							<td>Pancake</td>
+							<td>$12.50</td>
+					</tr>
+					
+				</table>
+
 			
+
 		</div>
 		<div class = "transparent-twinny"></div>
 	 </article>
