--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<td>Pancake</td>
 						<td>$12.50</td>
 					</tr>
-					<!-- <p class = "beneath-text">fresh brewed coffee and streamed milk </p> -->
+		
 					<tr class ="third-row">
 							<td>Pancake</td>
 							<td>$12.50</td>
@@ -126,7 +126,32 @@
 			
 
 		</div>
-		<div class = "transparent-twinny"></div>
+		<div class = "transparent-twinny">
+			<p class = "little-pointer">Delicious menu</p>
+			<h3 class = " pointer-heading">Breakfast</h3>
+				<table>
+					<tr class = "first-row ">
+							<td>Pancake</td>
+							<td>$12.50</td>
+					</tr>
+					<tr class = " second-row">
+						<td>Pancake</td>
+						<td>$12.50</td>
+					</tr>
+		
+					<tr class ="third-row">
+							<td>Pancake</td>
+							<td>$12.50</td>
+					</tr>
+					<tr>
+							<td>Pancake</td>
+							<td>$12.50</td>
+					</tr>
+					
+				</table>
+
+			
+		</div>
 	 </article>
 </body>
 <script src="https://kit.fontawesome.com/8968bf567a.js" crossorigin="anonymous"></script>
