--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							<td>Pancake</td>
 							<td>$12.50</td>
 					</tr>
-					<tr>
+					<tr class ="fourth-cake">
 							<td>Pancake</td>
 							<td>$12.50</td>
 					</tr>
