--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
 			
 		</div>
 	 </article>
+	 <footer>
+		
+	 </footer>
 </body>
 <script src="https://kit.fontawesome.com/8968bf567a.js" crossorigin="anonymous"></script>
 </html>
